OS libraries/tools added to About section

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -326,10 +326,12 @@
                          <li>When calculating offset values only those with unit types <i>CER</i> or <i>ERU</i> are used.</li>
                          <li>Offsets data for periods 2013 onwards is not available with sectors granularity since the European Commission stopped sharing such information after 2012.</li>
                      </ul>
+                     <br>
                      <h4>Licensing</h4>
                      <p>
                          This software is <strong>100% open source</strong> and released under <a href="http://www.gnu.org/licenses/agpl-3.0.en.html">AGPLv3</a> license.
                      </p>
+                     <br>
                      <h4>Developers</h4>
                      <p>
                          This tool was developed by the following <a href="http://www.sandbag.org.uk">Sandbag</a> team members:
@@ -337,6 +339,57 @@
                              <li><a href="http://www.twitter.com/pablopareja"><strong>Pablo Pareja</strong></a> - Main developer and project leader.</li>
                          </ul>
                      </p>
+                    <br>
+                    <h4><a id="OS Technologiesresources_used_0"></a>Technologies/resources used</h4>
+                    <br>
+                    
+                    <h5><strong>Databases</strong></h5>
+                    <ul>                        
+                        <li><strong><a href="http://www.neo4j.com">Neo4j</a></strong> Graph database  - <em>A highly scalable native graph database that leverages data relationships as first-class entities</em>
+                        </li>
+                    </ul> 
+                    <h5><strong>Tool deployment</strong></h5>
+                    <ul>                        
+                        <li><strong><a href="https://aws.amazon.com/">AWS</a></strong> - Amazon Web Services
+                        </li>                   
+                    </ul>
+                    <h5><strong>Javascript libraries</strong></h5>
+                    <ul>
+                        <li>
+                            <p><strong><a href="https://d3js.org/">D3.js</a></strong> - <em>Data-Driven documents</em></p>
+                        </li>
+                        <li>
+                            <p><strong><a href="http://dimplejs.org/">Dimple.js</a></strong> - <em>An object-oriented API for business analytics powered by d3.</em></p>
+                        </li>
+                        <li>
+                            <p><strong><a href="http://getbootstrap.com/">Bootstrap</a></strong> - <em>The most popular HTML, CSS, and JS framework for developing responsive, mobile first projects on the web.</em></p>
+                        </li>
+                        <li>
+                            <p><strong><a href="https://jquery.com/">jQuery</a></strong> - <em>jQuery is a fast, small, and feature-rich JavaScript library</em></p>
+                        </li>
+                        <li>
+                            <p><strong><a href="http://silviomoreto.github.io/bootstrap-select/">bootstrap-select</a></strong> - <em>A jQuery plugin that utilizes Bootstrap’s dropdown.js to style and bring additional functionality to standard select elements.</em></p>
+                        </li>
+                        <li>
+                            <p><strong><a href="http://leafletjs.com/">Leaflet</a></strong> - <em>an open-source JavaScript library for mobile-friendly interactive maps.</em></p>
+                        </li>
+                        <li>
+                            <p><strong><a href="https://github.com/js-cookie/js-cookie">Javascript Cookie</a></strong> - <em>A simple, lightweight JavaScript API for handling browser cookies</em></p>
+                        </li>
+                        <li>
+                            <p><strong><a href="https://github.com/Leaflet/Leaflet.markercluster">Leaflet.markercluster</a></strong> - <em>Marker Clustering plugin for Leaflet</em></p>
+                        </li>
+                    </ul> 
+                    <h5><strong>Icons/Fonts</strong></h5>
+                    <ul>
+                        <li>
+                            <p><strong><a href="https://icons8.com/">Icons8</a></strong></p>
+                        </li>
+                        <li>
+                            <p><strong><a href="http://fontawesome.io/">Font Awesome</a></strong></p>
+                        </li>
+                    </ul> 
+                    <br>
                  </div>  
                 <div class="col-lg-2"></div>
             </div>
