--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -273,7 +273,7 @@
 
             <div id="periods_combo_box_row" class="row" style="display: none">
                 <div class="col-md-4 " >
-                    <select id="periods_combobox" class="selectpicker" onchange="onPeriodsComboboxChange()"  data-size="8">
+                    <select id="periods_combobox" multiple data-actions-box="true" class="selectpicker" onchange="onPeriodsComboboxChange()"  data-size="8">
                     </select>
                 </div>  
                 <div class="col-md-4">
@@ -308,6 +308,9 @@
                             -->
                         </div>
                         <!-- /.panel-heading -->
+                        <div id="data_per_period_spinner_div" class="loading" style="display:none">
+                            <i class="fa fa-refresh fa-spin fa-3x fa-fw margin-bottom"></i>
+                        </div>
                         <div id="stacked_bar_chart" class="panel-body" style="height:400px">
                             <div id="offsets_warning_div" style="display:none">
                                 <p>
