loading info improved at eu wide view

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -181,6 +181,16 @@
                         <div id="eu_wide_chart" class="panel-body" style="height:450px">
                             <div id="eu_wide_spinner_div" class="loading" style="display:none">
                                 <i class="fa fa-refresh fa-spin fa-3x fa-fw margin-bottom"></i>
+                                <br>
+                                <br>
+                                <ul id="data_loaded_eu_wide_list">
+                                    <li id="legal_cap_eu_wide_item">Legal Cap</li>
+                                    <li id="verified_emissions_eu_wide_item">Verified Emissions</li>
+                                    <li id="free_allocation_eu_wide_item">Free Allocation</li>
+                                    <li id="auctions_eu_wide_item">Auctions</li>
+                                    <li id="offsets_eu_wide_item">Offsets</li>
+                                    <li id="offset_entitlements_eu_wide_item">Offset Entitlements</li>
+                                </ul>
                             </div>
                         </div>
                         <!-- /.panel-body -->
