fix at map when Power Installations are selected. Loader for Country Sector view improved.

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -242,6 +242,11 @@
                             </div>
                             <div id="spinner_div_country_sector" class="loading" style="display:none">
                                 <i class="fa fa-refresh fa-spin fa-3x fa-fw margin-bottom"></i>
+                                <ul id="data_loaded_country_sector_list">
+                                    <li id="verified_emissions_country_sector_item">Verified Emissions</li>
+                                    <li id="free_allocation_country_sector_item">Free Allocation</li>
+                                    <li id="offsets_country_sector_item">Offsets</li>
+                                </ul>
                             </div> 
                         </div>                        
                         <!-- /.panel-body -->
