--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -242,6 +242,8 @@
                             </div>
                             <div id="spinner_div_country_sector" class="loading" style="display:none">
                                 <i class="fa fa-refresh fa-spin fa-3x fa-fw margin-bottom"></i>
+                                <br>
+                                <br>
                                 <ul id="data_loaded_country_sector_list">
                                     <li id="verified_emissions_country_sector_item">Verified Emissions</li>
                                     <li id="free_allocation_country_sector_item">Free Allocation</li>
@@ -563,6 +565,16 @@
         initMenus();
         initMainPage();
             
+        //---Google Analytics----
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-81304709-1', 'auto');
+          ga('send', 'pageview');
+        //-------------------------------
+
     </script>
 
 </body>
