contributors added to about page

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -368,6 +368,15 @@
                          </ul>
                      </p>
                     <br>
+                    <h4>Contributors</h4>
+                    <p>
+                        The following <a href="http://www.sandbag.org.uk">Sandbag</a> team members helped in the creation of this tool:
+                        <ul style="list-style-type:square">
+                            <li><a href=""><strong>Tricia Buckley</strong></a> - Data quality, testing and support.</li>
+                            <li><a href=""><strong>Boris Lagadinov</strong></a> - ETS expertise and data testing.</li>
+                            <li><a href=""><strong>Phil MacDonald</strong></a> - Campaigning expert.</li>
+                        </ul>
+                    </p>
                     <h4><a id="OS Technologiesresources_used_0"></a>Technologies/resources used</h4>
                     <br>
                     
