--- a/index.html
+++ b/index.html
@@ -1,3 +1,392 @@
-<html>
-Welcome!
+
+<!DOCTYPE html>
+<html class="no-js">
+	<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Sandbag EU ETS Dashboard</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="Pablo Pareja Tobes" />
+
+
+  	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content=""/>
+	<meta property="og:image" content=""/>
+	<meta property="og:url" content=""/>
+	<meta property="og:site_name" content=""/>
+	<meta property="og:description" content=""/>
+	<meta name="twitter:title" content="" />
+	<meta name="twitter:image" content="" />
+	<meta name="twitter:url" content="" />
+	<meta name="twitter:card" content="" />
+
+	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+	<link rel="shortcut icon" href="favicon.ico">
+
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700,900' rel='stylesheet' type='text/css'>
+
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
+	
+	<!-- Animate.css -->
+	<link rel="stylesheet" href="./css/animate.css">
+	<!-- Icomoon Icon Fonts-->
+	<link rel="stylesheet" href="./css/icomoon.css">
+	<!-- Simple Line Icons -->
+	<link rel="stylesheet" href="./css/simple-line-icons.css">
+	<!-- Bootstrap  -->
+	<link rel="stylesheet" href="./css/bootstrap.css">
+	<!-- Theme style  -->
+	<link rel="stylesheet" href="./css/dashboard_index.css">
+        
+    <!-- Custom Fonts -->
+    <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+	<!-- Modernizr JS -->
+	<script src="./js/modernizr-2.6.2.min.js"></script>
+	<!-- FOR IE9 below -->
+	<!--[if lt IE 9]>
+	<script src="js/respond.min.js"></script>
+	<![endif]-->
+
+	</head>
+	<body>
+	
+	
+	<div id="fh5co-page">
+	<header id="fh5co-header" role="banner">
+		<div class="container">
+			<div class="header-inner">
+				<h1><i class="sl-icon-energy"></i><a href="https://github.com/sandbag-climate/sandbag-climate.github.io">EU ETS Dashboard</a></h1>
+				<nav role="navigation">
+					<ul class="nav navbar-nav navbar-right" >
+                          <a href="https://twitter.com/sandbagorguk" style="color: #0066cc;"><i class="fa fa-twitter fa-lg fa-fw"></i></a>
+                          <a href="https://github.com/sandbag-climate/sandbag-climate.github.io" style="color: #0066cc;"><i class="fa fa-github fa-lg fa-fw"></i></a>
+                          <a href="http://www.sandbag.org.uk"><img src="images/sandbag_logo_small.png"/></a>
+                    </ul> 
+				</nav>
+			</div>
+		</div>
+	</header>
+	<div id="fh5co-intro-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center">
+					<h2>EU ETS Dashboard, an interactive tool to analyze Emission Trading Data in real-time</h2>
+                    <button type="button" class="btn btn-primary" onclick="window.location.href='http://sandbag-climate.github.io/EU_ETS_Dashboard.html'">Try it!</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="fh5co-featured-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<a href="#" class="featured-grid" style="background-image: url(./images/dashboard_country_sector_chart.png);">
+						<div class="desc">
+							<h3>Filter data in real time</h3>
+							<span>Analyze data by country, sector, period...</span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-6">
+					<a href="#" class="featured-grid featured-grid-2" style="background-image: url(./images/dashboard_line_chart.png);">
+						<div class="desc">
+							<h3>Explore trends</h3>
+							<span>Compare data across time</span>
+						</div>
+					</a>
+					<div class="row">
+						<div class="col-md-6">
+							<a href="#" class="featured-grid featured-grid-2" style="background-image: url(./images/dashboard_map1.png);">
+								<div class="desc">
+									<h3>Map the Emissions</h3>
+									<span>Navigate through installations to see their emissions</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a href="#" class="featured-grid featured-grid-2" style="background-image: url(./images/dashboard_eu_wide_chart.png);">
+								<div class="desc">
+									<h3>See the big picture</h3>
+									<span>Analyze the system at a EU wide scale</span>
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="fh5co-services-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
+					<h2>A new way to access emissions data</h2>
+					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4 services-inner text-center">
+					<span><i class="sl-icon-graph"></i></span>
+					<h3>100% Open Source</h3>
+					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+				</div>
+				<div class="col-md-4 services-inner text-center">
+					<span><i class="sl-icon-heart"></i></span>
+					<h3>Cross-platform</h3>
+					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+				</div>
+				<div class="col-md-4 services-inner text-center">
+					<span><i class="sl-icon-key"></i></span>
+					<h3>Interactive</h3>
+					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+				</div>
+
+			</div>
+		</div>
+	</div>	
+	<div id="fh5co-client-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
+					<h2>Success Stories</h2>
+					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 text-center">
+					<div class="testimony">
+						<span class="quote"><i class="icon-quote-right"></i></span>
+						<blockquote>
+							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<span>Athan Smith, via <a href="#" class="icon-twitter twitter-color"></a></span>
+						</blockquote>
+					</div>
+				</div>
+				<div class="col-md-6 text-center">
+					<div class="testimony">
+						<span class="quote"><i class="icon-quote-right"></i></span>
+						<blockquote>
+							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<span>Athan Smith, via <a href="#" class="icon-google-plus googleplus-color"></a></span>
+						</blockquote>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<footer id="fh5co-footer" role="contentinfo">
+	
+		<div class="container">		
+			
+			<div class="col-md-12 fh5co-copyright text-center">
+                <p>&copy; 2016 Sandbag Climate Campaign.<span>Page based on Free HTML5 template by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a></span></p>	
+			</div>
+			
+		</div>
+	</footer>
+	</div>
+	
+	
+	<!-- jQuery -->
+	<script src="./js/jquery-1.9.1.min.js"></script>
+	<!-- jQuery Easing -->
+	<script src="./js/jquery.easing.1.3.js"></script>
+	<!-- Bootstrap -->
+	<script src="./js/bootstrap.js"></script>
+	<!-- Waypoints -->
+	<script src="./js/jquery.waypoints.min.js"></script>
+
+    <script>
+        ;(function () {
+
+        'use strict';
+
+
+
+        var isMobile = {
+            Android: function() {
+                return navigator.userAgent.match(/Android/i);
+            },
+                BlackBerry: function() {
+                return navigator.userAgent.match(/BlackBerry/i);
+            },
+                iOS: function() {
+                return navigator.userAgent.match(/iPhone|iPad|iPod/i);
+            },
+                Opera: function() {
+                return navigator.userAgent.match(/Opera Mini/i);
+            },
+                Windows: function() {
+                return navigator.userAgent.match(/IEMobile/i);
+            },
+                any: function() {
+                return (isMobile.Android() || isMobile.BlackBerry() || isMobile.iOS() || isMobile.Opera() || isMobile.Windows());
+            }
+        };
+
+        var fullHeight = function() {
+
+            if ( !isMobile.any() ) {
+                $('.js-fullheight').css('height', $(window).height());
+                $(window).resize(function(){
+                    $('.js-fullheight').css('height', $(window).height());
+                });
+            }
+
+        };
+
+
+        var centerBlock = function() {
+            $('.fh5co-section-with-image .fh5co-box').css('margin-top', -($('.fh5co-section-with-image .fh5co-box').outerHeight()/2));
+            $(window).resize(function(){
+                $('.fh5co-section-with-image .fh5co-box').css('margin-top', -($('.fh5co-section-with-image .fh5co-box').outerHeight()/2));
+            });
+        };
+
+        var responseHeight = function() {
+            setTimeout(function(){
+                $('.js-responsive > .v-align').css('height', $('.js-responsive > img').height());
+            }, 1);
+
+            $(window).resize(function(){
+                setTimeout(function(){
+                    $('.js-responsive > .v-align').css('height', $('.js-responsive > img').height());
+                }, 1);
+            })
+        };
+
+
+        var mobileMenuOutsideClick = function() {
+
+            $(document).click(function (e) {
+            var container = $("#fh5co-offcanvas, .js-fh5co-nav-toggle");
+            if (!container.is(e.target) && container.has(e.target).length === 0) {
+
+                if ( $('body').hasClass('offcanvas-visible') ) {
+
+                    $('body').removeClass('offcanvas-visible');
+                    $('.js-fh5co-nav-toggle').removeClass('active');
+
+                }
+
+
+            }
+            });
+
+        };
+
+
+        var offcanvasMenu = function() {
+            $('body').prepend('<div id="fh5co-offcanvas" />');
+            $('#fh5co-offcanvas').prepend('<ul id="fh5co-side-links">');
+            $('body').prepend('<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>');
+            $('#fh5co-offcanvas').append($('#fh5co-header nav').clone());
+        };
+
+
+        var burgerMenu = function() {
+
+            $('body').on('click', '.js-fh5co-nav-toggle', function(event){
+                var $this = $(this);
+
+                $('body').toggleClass('fh5co-overflow offcanvas-visible');
+                $this.toggleClass('active');
+                event.preventDefault();
+
+            });
+
+            $(window).resize(function() {
+                if ( $('body').hasClass('offcanvas-visible') ) {
+                $('body').removeClass('offcanvas-visible');
+                $('.js-fh5co-nav-toggle').removeClass('active');
+               }
+            });
+
+            $(window).scroll(function(){
+                if ( $('body').hasClass('offcanvas-visible') ) {
+                $('body').removeClass('offcanvas-visible');
+                $('.js-fh5co-nav-toggle').removeClass('active');
+               }
+            });
+
+        };
+
+
+        var toggleBtnColor = function() {
+            if ( $('#fh5co-hero').length > 0 ) {	
+                $('#fh5co-hero').waypoint( function( direction ) {
+                    if( direction === 'down' ) {
+                        $('.fh5co-nav-toggle').addClass('dark');
+                    }
+                } , { offset: - $('#fh5co-hero').height() } );
+
+                $('#fh5co-hero').waypoint( function( direction ) {
+                    if( direction === 'up' ) {
+                        $('.fh5co-nav-toggle').removeClass('dark');
+                    }
+                } , { 
+                    offset:  function() { return -$(this.element).height() + 0; }
+                } );
+            }
+        };
+
+
+
+        var contentWayPoint = function() {
+            var i = 0;
+            $('.animate-box').waypoint( function( direction ) {
+
+                if( direction === 'down' && !$(this.element).hasClass('animated') ) {
+
+                    i++;
+
+                    $(this.element).addClass('item-animate');
+                    setTimeout(function(){
+
+                        $('body .animate-box.item-animate').each(function(k){
+                            var el = $(this);
+                            setTimeout( function () {
+                                var effect = el.data('animate-effect');
+                                if ( effect === 'fadeIn') {
+                                    el.addClass('fadeIn animated');
+                                } else if ( effect === 'fadeInLeft') {
+                                    el.addClass('fadeInLeft animated');
+                                } else if ( effect === 'fadeInRight') {
+                                    el.addClass('fadeInRight animated');
+                                } else {
+                                    el.addClass('fadeInUp animated');
+                                }
+
+                                el.removeClass('item-animate');
+                            },  k * 200, 'easeInOutExpo' );
+                        });
+
+                    }, 100);
+
+                }
+
+            } , { offset: '85%' } );
+        };
+
+
+
+
+        $(function(){
+            fullHeight();
+            centerBlock();
+            responseHeight()
+            mobileMenuOutsideClick();
+            offcanvasMenu();
+            burgerMenu();
+            toggleBtnColor();
+            contentWayPoint();
+        });
+
+
+    }());    
+    </script>
+	</body>
 </html>
+
