--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<header id="fh5co-header" role="banner">
 		<div class="container">
 			<div class="header-inner">
-				<h1><i class="sl-icon-energy"></i><a href="https://github.com/sandbag-climate/sandbag-climate.github.io">EU ETS Dashboard</a></h1>
+				<h1><i class="sl-icon-energy"></i><a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html">EU ETS Dashboard</a></h1>
 				<nav role="navigation">
 					<ul class="nav navbar-nav navbar-right" >
                           <a href="https://twitter.com/sandbagorguk" style="color: #0066cc;"><i class="fa fa-twitter fa-lg fa-fw"></i></a>
