some updates in texts and CSS styles for dashboard landing page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
-					<h2>EU ETS Dashboard, an interactive tool to analyze Emission Trading Data in real-time</h2>
+					<h2>EU ETS Dashboard, an interactive tool to analyze data from the European Union Emission Trading System</h2>
                     <button type="button" class="btn btn-primary" onclick="window.location.href='http://sandbag-climate.github.io/EU_ETS_Dashboard.html'">Try it!</button>
 				</div>
 			</div>
@@ -122,7 +122,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
 					<h2>A new way to access emissions data</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+					<p>Data on power and industry greenhouse gas emissions for every installation in the 28 Member States. </p>
 				</div>
 			</div>
 			<div class="row">
@@ -149,8 +149,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Success Stories</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+					<h2>Challenges and Successes</h2>
+					<p>The ETS remains a broken market, failing to drive the CO2 cuts needed to prevent dangerous climate change, and failing to support the new clean industrial revolution that the EU needs. But Sandbag has had some big successes in improving the scheme.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -158,8 +158,8 @@
 					<div class="testimony">
 						<span class="quote"><i class="icon-quote-right"></i></span>
 						<blockquote>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							<span>Athan Smith, via <a href="#" class="icon-twitter twitter-color"></a></span>
+                            <span>Banning HFC offsets</span>
+							<p>At the beginning of the ETS, millions of dodgy carbon offsets flooded the scheme, from greenhouse gas HFC-23, a by-product of the manufacturing of the refrigerant gas HCFC-22. Sandbag successfully helped campaign for them to be banned, protecting the integrity of the ETS.</p>						
 						</blockquote>
 					</div>
 				</div>
@@ -167,8 +167,8 @@
 					<div class="testimony">
 						<span class="quote"><i class="icon-quote-right"></i></span>
 						<blockquote>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							<span>Athan Smith, via <a href="#" class="icon-google-plus googleplus-color"></a></span>
+                            <span>Market Stability Reserve</span>
+							<p>A vast surplus of billions of unused pollution allowances keep the ETS price so low. Last year, Sandbag helped win a reform called the Market Stability Reserve, which will eventually remove the surplus from the system. However, the EU needs to take action now, and the new reform won’t get rid of the surplus until around 2030. Quicker action is needed!</p>							
 						</blockquote>
 					</div>
 				</div>
