performance improvement. EU wide relationships

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -15,9 +15,6 @@
     <!-- Bootstrap Core CSS -->
     <link href="./css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom CSS 
-    <link href="./css/sb-admin-2.css" rel="stylesheet">-->
-
     <!-- Custom Fonts -->
     <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css">
     
@@ -470,7 +467,10 @@
                 </div>
                 
                  <div class="col-lg-6">
-                     <h3 class="page-header">Contact us</h3>                     
+                     <h3 class="page-header">Contact us</h3>   
+                     <p class="bg-info">
+                         <strong>Notice an interesting story as you’re investigating this data? Please tell us about it, and we can see if there’s a campaign needed!</strong>
+                     </p>
                      <form id="contact_us_form" role="form" action="http://formspree.io/pablo@sandbag.org.uk" method="POST"
                            onsubmit="return validateForm()">
                           <input type="hidden" name="_next" value="" />
