improvements in dashboard landing page

--- a/index.html
+++ b/index.html
@@ -127,21 +127,21 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 services-inner text-center">
-					<span><i class="sl-icon-graph"></i></span>
+					<span><i class="fa fa-users"></i></i></span>
 					<h3>100% Open Source</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+					<p><a href="http://www.sandbag.org.uk"><strong>Sandbag</strong></a> has a commitment to Open Source Software. We believe in the benefits of making our tools available to the community for free as part of an effort to fight against Climate Change. The EU ETS Dashboard is released under the <a href="https://www.gnu.org/licenses/agpl-3.0.en.html"><strong>AGPLv3</strong></a> license.
+                    Check <a href="os_technologies.html"><strong>this section</strong></a> for information about the open source libraries used.</p>
 				</div>
 				<div class="col-md-4 services-inner text-center">
-					<span><i class="sl-icon-heart"></i></span>
+					<span><i class="fa fa-recycle"></i></span>
 					<h3>Cross-platform</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+					<p>The EU ETS Dashboard is cross-platform and thus can be accessed on your laptop, smartphone, tablet... without the need to install anything in advance. Just open your browser and play with the data!</p>
 				</div>
 				<div class="col-md-4 services-inner text-center">
-					<span><i class="sl-icon-key"></i></span>
+					<span><i class="fa fa-hand-pointer-o"></i></span>
 					<h3>Interactive</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+					<p>We have included a set of different user-friendly reactive visualizations that would allow you to explore the data from different perspectives by directly interacting with them. Make use of them together with the various filters available and help us find stories hidden in the data!</p>
 				</div>
-
 			</div>
 		</div>
 	</div>	
@@ -383,6 +383,16 @@
             toggleBtnColor();
             contentWayPoint();
         });
+            
+        //---Google Analytics----
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-81304709-1', 'auto');
+          ga('send', 'pageview');
+        //-------------------------------
 
 
     }());    
