--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -352,7 +352,7 @@
                          
                      </p>
                      <ul style="list-style-type:square">
-                         <li>The ETS data shown in this tool was extracted from the European Commission’s <a href="http://ec.europa.eu/environment/ets/">EUTL</a> website on <strong>June 20th 2016</strong>. Such data is put <strong>in the public domain</strong> by the European Commission according to the Article 109 of the Commission Regulation 389/2013, which prescribes that the data defined in Annex XIV of the Regulation should be made public (points 1-4 and 7 of the Annex).</li>     
+                         <li>The ETS data shown in this tool was extracted from the European Commission’s <a href="http://ec.europa.eu/environment/ets/">EUTL</a> website on <strong>July 18th 2016</strong>. Such data is put <strong>in the public domain</strong> by the European Commission according to the Article 109 of the Commission Regulation 389/2013, which prescribes that the data defined in Annex XIV of the Regulation should be made public (points 1-4 and 7 of the Annex).</li>     
                          <li>When calculating offset values only those with unit types <i>CER</i> or <i>ERU</i> are used.</li>
                          <li>Offsets data for periods 2013 onwards is not available with sectors granularity since the European Commission stopped sharing such information after 2012.</li>
                      </ul>
@@ -374,7 +374,7 @@
                     <p>
                         The following <a href="http://www.sandbag.org.uk">Sandbag</a> team members helped in the creation of this tool:
                         <ul style="list-style-type:square">
-                            <li><a href=""><strong>Tricia Buckley</strong></a> - Data quality, testing and support.</li>
+                            <li><a href=""><strong>Tricia Buckley</strong></a> - Data, testing and support.</li>
                             <li><a href=""><strong>Boris Lagadinov</strong></a> - ETS expertise and data testing.</li>
                             <li><a href=""><strong>Phil MacDonald</strong></a> - Campaigning expert.</li>
                         </ul>
