a few fixes and minor updates

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -124,7 +124,7 @@
                                 <div class="btn-group" >
                                         <select id="include_aviation_combobox" onchange="onIncludeAviationComboboxChange()" class="selectpicker"  width="fit">
                                         <option >Include Aviation</option>
-                                        <option>Exclude Aviation</option>
+                                        <option selected="selected">Exclude Aviation</option>
                                         <option>Show only Aviation</option>
                                     </select>
                                 </div>  
